<resources>
    <string name="app_name">GymBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_training_day">TrainingDayActivity</string>
    <string name="training_style_text">Styl</string>
    <string name="add_exercise_text">Přidat cvik</string>
    <string name="muscle_groups_text">Svalové partie</string>
    <string name="name_text">Název</string>
    <string name="sets_text">Sets</string>
    <string name="reps_text">Reps</string>
    <string name="weight_text">Váha</string>
    <string name="add_comment_text">Přidat komentář (nepovinné)</string>

    <string name="mon">PO</string>
    <string name="tue">ÚT</string>
    <string name="wed">ST</string>
    <string name="thu">ČT</string>
    <string name="fri">PÁ</string>
    <string name="sat">SO</string>
    <string name="sun">NE</string>
    <string name="sets_reps_text"><![CDATA[Sets & Reps]]></string>
    <string name="delete_ex_text">Odstranit</string>
    <string name="toolbar_text_strength">SILOVÉ</string>
    <string name="toolbar_text_objem">OBJEMOVÉ</string>
    <string name="toolbar_text_performance">VÝKON</string>
    <string name="toolbar_text_endurance">VÝDRŽ</string>
</resources>
