<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zoubelu.gymbuddy.activity.TrainingDayActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/training_day_table"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/fab_margin"
                android:background="@color/greyed_out">
            <!--TODO: udelat scrollable z rows a ne z cele tabulky-->
                <TableRow
                    android:id="@+id/add_exercise_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent">

                    <TextView
                        android:id="@+id/textViewAddExercise"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/fab_margin"
                        android:gravity="center"
                        android:text="@string/add_exercise_text"
                        android:textAlignment="center" />

                    <ImageButton
                        android:id="@+id/add_exercise_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@android:drawable/ic_menu_add" />

                </TableRow>


            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll_view"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/training_style_text" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll_view"
        android:layout_margin="@dimen/fab_margin"
        android:layout_toRightOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_margin="@dimen/fab_margin"
        android:hint="@string/add_comment_text" />


</RelativeLayout>